Fix layerr link position issue on Safari

--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -71,12 +71,21 @@
       flex-direction: column;
       align-items: center;
       bottom: 8rem;
+      width: 100%;
 
       @include desktop {
-        align-items: normal;
-
+        align-items: flex-start;
         top: 4px;
         left: 16px;
+      }
+
+      &-link {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        @include desktop {
+          align-items: flex-start;
+        }
       }
 
       &-image {
